    intermittently. (Wei-Chiu Chuang via Arpit Agarwal)

    HDFS-9484. NNThroughputBenchmark$BlockReportStats should not send empty
    block reports. (Mingliang Liu via shv)

    HDFS-9589. Block files which have been hardlinked should be duplicated
    before the DataNode appends to the them (cmccabe)

    HDFS-9701. DN may deadlock when hot-swapping under load. (Xiao Chen via lei)

Release 2.7.3 - UNRELEASED
    HDFS-10623. Remove unused import of httpclient.HttpConnection from
    TestWebHdfsTokens. (Hanish Koneru via Arpit Agarwal)

Release 2.7.2 - 2016-01-25

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HDFS-7163. WebHdfsFileSystem should retry reads according to the configured
    retry policy. (Eric Payne via kihwal)

    HDFS-9654. Code refactoring for HDFS-8578.  (szetszwo)

  OPTIMIZATIONS

  BUG FIXES
    
    HDFS-9851. NameNode throws NPE when setPermission is called on a path that
    does not exist. (Brahma Reddy Battula via aajisaka)

    HDFS-9730. Storage ID update does not happen when there is a layout change
    (Tsz Wo Nicholas Sze via kihwal)

Release 2.7.2 - 2016-01-25

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HDFS-8099. Change "DFSInputStream has been closed already" message to
    debug log level (Charles Lamb via Colin P. McCabe)

    HDFS-7978. Add LOG.isDebugEnabled() guard for some LOG.debug(..).
    (Walter Su via wang)

  OPTIMIZATIONS

    HDFS-8656. Preserve compatibility of ClientProtocol#rollingUpgrade after
    finalization. (wang)

    HDFS-8867. Enable optimized block reports. (Daryn Sharp via jing9)

  BUG FIXES

    HDFS-8863. The remaining space check in BlockPlacementPolicyDefault is
    flawed. (Kihwal Lee via yliu)

    HDFS-8995. Flaw in registration bookeeping can make DN die on reconnect.
    (Kihwal Lee via yliu)

    HDFS-8384. Allow NN to startup if there are files having a lease but are not
    under construction. (jing9)
