@@ -193,8 +193,18 @@ public class NameNodeProxies {
         dtService = SecurityUtil.buildTokenService(
             NameNode.getAddress(conf, nameNodeUri));
       }
-      return new ProxyAndInfo<T>(proxy, dtService,
-          NameNode.getAddress(conf, nameNodeUri));
+
+      InetSocketAddress nnAddress;
+
+      //We dont need to resolve the address if is it a Nameservice ID
+      if(HAUtil.isLogicalUri(conf, nameNodeUri)) {
+        nnAddress = InetSocketAddress.createUnresolved(
+            nameNodeUri.getHost(), NameNode.DEFAULT_PORT);
+      } else {
+        nnAddress = NameNode.getAddress(conf, nameNodeUri);
+      }
+
+      return new ProxyAndInfo<T>(proxy, dtService, nnAddress);
     }
   }
   
